hphp/test/zend/good/ext/pdo/tests/bug47769.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded("pdo_sqlite"))
    die("skip: PDO_SQLite not available");
}
